# rgwift

./: run_rgwift.sh  setup.cfg
app/: rgwift.py
doc/: rgwift_design.mdj
etc/: rgwift-server.conf.sample
middleware/: wsgi_relay.py
server/: swift-middleware-server
