[metadata]
name = rgwift
author = Radoslaw Zarzynski
author-email = rzarzynski@mirantis.com
summary = Really simple swift-proxy reimlementation to reuse Swift WSGI middleware with Ceph RADOS Gateway
#description-file = README
home-page = Radoslaw Zarzynski
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    rgwift
[entry_points]

